// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIRolloverCheckbox allows for a user defined rollover component to be passed 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div>
      <div
        id="rolloverComponent"
      />
    </div>
    <div
      className="xui-rollovercheckbox-hidden xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox displays the checkbox when it's set to be shown 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox doesn't display the checkbox when it's set to hidden 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div>
      <div />
    </div>
    <div
      className="xui-rollovercheckbox-hidden xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox include an automation-id 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid="test-rollovercheckbox"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    />
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        data-automationid="test-rollovercheckbox--checkbox"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          data-automationid="test-rollovercheckbox--checkbox--input"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          data-automationid="test-rollovercheckbox--checkbox--checkbox"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox includes an aria-label, when provided 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          aria-label="Test label"
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of size checkboxes will be a medium checkbox when medium is set on the checkboxSize prop. 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of size checkboxes will be a small checkbox when passed in the checkboxSize prop 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-small-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-small"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of size checkboxes will be a xsmall checkbox when passed in the checkboxSize prop 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-xsmall-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-xsmall"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-xsmall"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders an id on the root node when passed 1`] = `
<div
  className="xui-rollovercheckbox--target"
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders checked when specified 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          checked={true}
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders correctly 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    />
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders unchecked when specified 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          checked={false}
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox should render the disabled classes and a disabled checkbox when isDisabled prop is true 1`] = `
<div
  className="xui-rollovercheckbox--target xui-rollovercheckbox--target-disabled"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover xui-styledcheckboxradio-is-disabled"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={true}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox shouldn't render the disabled classes and a disabled checkbox by default 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox shouldn't render the disabled classes or a disabled checkbox when isDisabled prop is false 1`] = `
<div
  className="xui-rollovercheckbox--target"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox xui-rollovercheckbox-has-medium-checkbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <div
      className="xui-rollovercheckbox--styledcheckboxradio xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
    >
      <label
        className="xui-styledcheckboxradio xui-styledcheckboxradio-is-rollover"
        onClick={[Function]}
      >
        <input
          className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium xui-rollovercheckbox--checkbox"
          defaultChecked={false}
          disabled={false}
          onChange={[Function]}
          required={false}
          tabIndex={0}
          type="checkbox"
        />
        <div
          className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox xui-styledcheckboxradio--checkbox-medium"
          onAnimationEnd={[Function]}
        >
          <div
            className="xui-touchtarget"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
